# ndsx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  addr2line.sh  format.sh  libnds_sym_renames.txt  symbol_renames.txt
.github/workflows/: build.yml
include/: CStrArray.hpp  DylibManager.hpp  process_manager.hpp  pthread.h
src/kernel/: DylibManager.cpp  main.cpp  process_manager.cpp  process_manager.hpp  std_streams.c  syscalls.cpp
src/kernel/syscalls/: cothread.cpp  fd.cpp  process.cpp  pthread.cpp
src/programs/: argv-test.cpp  env-test.cpp  init.cpp  jailbreak-test.cpp  my_prog.cpp
